Update footer text and resolve white space issue

--- a/style/main.css
+++ b/style/main.css
@@ -19,8 +19,11 @@
 }
 
 #main-body {
-  height: 100%;
   background: #191e27;
+}
+
+.body-main {
+  min-height: 100vh;
 }
 
 .players-container {
